administrator/components/com_stripela/assets/css/stripela.css
[v-cloak] {
    display:none;
}

.stripela-dropdown-menu li a:hover {
    color: #fff;
}

.v-navigation-drawer .v-list-item__icon {
    margin-right: 0.5em;
}

.stripela-pagination {
    margin: 1rem 0;
}

.v-icon.v-icon.fas {
    font-size: inherit;
}

.v-application {
    z-index: 2000;
}

